src/snapshots/tptp__tests__fof_function_term.snap
---
source: src/tests.rs
expression: parsed
---
Plain(
    Function(
        Functor(
            Lower(
                LowerWord(
                    "f",
                ),
            ),
        ),
        FofArguments(
            [
                Variable(
                    Variable(
                        UpperWord(
                            "X",
                        ),
                    ),
                ),
            ],
        ),
    ),
)
