src/snapshots/tptp__tests__fof_infix_unary.snap
---
source: src/tests.rs
expression: parsed
---
InfixUnary {
    left: Function(
        Plain(
            Function(
                Functor(
                    Lower(
                        LowerWord(
                            "f",
                        ),
                    ),
                ),
                Arguments(
                    [
                        Variable(
                            Variable(
                                UpperWord(
                                    "X",
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ),
    op: InfixInequality,
    right: Function(
        Plain(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
