src/snapshots/tptp__tests__fof_logic_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Binary(
    Nonassoc(
        FofBinaryNonassoc {
            left: Unitary(
                Atomic(
                    Plain(
                        FofPlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            op: LRImplies,
            right: Unitary(
                Atomic(
                    Plain(
                        FofPlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "q",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
    ),
)
