src/snapshots/tptp__tests__fof_logic_formula-7.snap
---
source: src/tests.rs
expression: parsed
---
Binary(
    Assoc(
        Or(
            OrFormula(
                [
                    Unitary(
                        Atomic(
                            Plain(
                                PlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "p",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                    Unitary(
                        Atomic(
                            Plain(
                                PlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "q",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                    Unitary(
                        Atomic(
                            Plain(
                                PlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "r",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
