src/snapshots/tptp__tests__fof_logic_formula-9.snap
---
source: src/tests.rs
expression: parsed
---
Unitary(
    Atomic(
        Plain(
            PlainAtomicFormula(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "p",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
