src/snapshots/tptp__tests__fof_logic_formula.snap
---
source: src/tests.rs
expression: parsed
---
Unary(
    Unary(
        UnaryConnective,
        Unitary(
            Atomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
