src/snapshots/tptp__tests__fof_plain_term-3.snap
---
source: src/tests.rs
expression: parsed
---
Function(
    Functor(
        Lower(
            LowerWord(
                "f",
            ),
        ),
    ),
    Arguments(
        [
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
        ],
    ),
)
