src/snapshots/tptp__tests__fof_plain_term-5.snap
---
source: src/tests.rs
expression: parsed
---
Function(
    Functor(
        Lower(
            LowerWord(
                "f",
            ),
        ),
    ),
    FofArguments(
        [
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
            Function(
                Plain(
                    Function(
                        Functor(
                            Lower(
                                LowerWord(
                                    "g",
                                ),
                            ),
                        ),
                        FofArguments(
                            [
                                Variable(
                                    Variable(
                                        UpperWord(
                                            "Y",
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
            ),
        ],
    ),
)
